--- a/src/App.css
+++ b/src/App.css
@@ -495,29 +495,38 @@ input[type="tel"]:focus {
   -webkit-overflow-scrolling: touch;
 }
 
+.component-gallery {
+  background-color: var(--color-primary);
+  border-radius: 0px 0px 20px 20px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  height: var(--height-profile-component);
+  width: var(--width-profile-component);
+  -webkit-overflow-scrolling: touch;
+}
+
 .component-document,
 .component-badge,
 .component-exchange,
-.component-gallery,
 .component-detailed {
   background-color: var(--color-primary);
   background: -moz-linear-gradient(
     top,
     #00cf88 0%,
-    #00cf88 50%,
-    #ffffff 50%
+    #00cf88 30%,
+    #ffffff 30%
   ); /* FF3.6-15 */
   background: -webkit-linear-gradient(
     top,
     #00cf88 0%,
-    #00cf88 50%,
-    #ffffff 50%
+    #00cf88 30%,
+    #ffffff 30%
   ); /* Chrome10-25,Safari5.1-6 */
   background: linear-gradient(
     to bottom,
     #00cf88 0%,
-    #00cf88 50%,
-    #ffffff 50%
+    #00cf88 30%,
+    #ffffff 30%
   ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00cf88', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
   border-radius: 0px 0px 20px 20px;
@@ -993,7 +1002,7 @@ input[type="tel"]:focus {
 
 .progress-badges {
   z-index: 1;
-  margin: 2px 10px;
+  margin: 1px 10px;
   width: 50px;
   height: 50px;
   background-color: white;
@@ -1001,14 +1010,14 @@ input[type="tel"]:focus {
   display: flex;
   justify-content: center;
   align-content: center;
-  border: 3px var(--color-primary) solid;
+
   border-radius: 50px;
 }
 .progress-badges img {
   z-index: 1;
   width: 90px;
   height: 90px;
-  margin-top: -23px;
+  margin-top: -21px;
 }
 
 .about-me {
@@ -1165,7 +1174,7 @@ input[type="tel"]:focus {
   display: flex;
   justify-content: center;
   align-content: center;
-  border: 3px var(--color-primary) solid;
+
   border-radius: 50px;
 }
 
@@ -1178,7 +1187,7 @@ input[type="tel"]:focus {
   width: 90px;
   height: 90px;
 
-  margin-top: -23px;
+  margin-top: -20px;
 }
 
 .user-profile-image-badge {
@@ -1314,7 +1323,8 @@ input[type="tel"]:focus {
   background: var(--color-primary);
   max-height: 80vh;
   border-radius: 20px 20px 20px 20px;
-  overflow: hidden;
+  overflow-y: scroll;
+  overflow-x: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1324,7 +1334,13 @@ input[type="tel"]:focus {
   max-height: var(--height-profile-component);
 }
 
+.all-users-content::-webkit-scrollbar {
+  display: none;
+}
+
 .all-users-content .top-bar-component {
+  position: relative;
+  margin-top: 70px;
   justify-content: none;
   padding: 8% 25% 7% 5%;
   color: white;
